// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createClusterLink Should return - 1`] = `"-"`;

exports[`createClusterLink Should return - 2`] = `"-"`;

exports[`createClusterLink Should return - 3`] = `"-"`;

exports[`createClusterLink Should return cluster name 1`] = `"tiny-remote"`;

exports[`createClusterLink Should return createClusterLink 1`] = `
<a
  href="undefined/redhat/tiny-remote"
>
  tiny-remote
</a>
`;

exports[`getClusterViolationLabels Should return labels of truncated text item 1`] = `
<TruncateText
  maxCharacters={35}
  text="nonCompliant1, nonCompliant2"
/>
`;

exports[`getTruncatedText Should return truncated text item 1`] = `
<TruncateText
  maxCharacters={35}
  text="TruncateText"
/>
`;
